feat: Add filtering of hidden resources in folders for admin and non-admin access scenarios, enhance test coverage